--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -1500,6 +1500,376 @@ QPushButton[digital=&quot;true&quot;]:pressed{
       </layout>
      </widget>
     </widget>
+    <widget class="QWidget" name="tab_4">
+     <attribute name="title">
+      <string>PWM</string>
+     </attribute>
+     <widget class="QGroupBox" name="gbPwm03">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>20</y>
+        <width>260</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>PWM 3</string>
+      </property>
+      <widget class="QLabel" name="lbPwm3">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>20</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QwtSlider" name="pwmBar03">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>200</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="mass">
+        <double>0.000000000000000</double>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="scalePosition">
+        <enum>QwtSlider::BottomScale</enum>
+       </property>
+       <property name="bgStyle">
+        <enum>QwtSlider::BgTrough</enum>
+       </property>
+       <property name="thumbLength">
+        <number>20</number>
+       </property>
+       <property name="thumbWidth">
+        <number>15</number>
+       </property>
+       <property name="borderWidth">
+        <number>2</number>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="gbPwm05">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>100</y>
+        <width>260</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>PWM 5</string>
+      </property>
+      <widget class="QLabel" name="lbPwm5">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>20</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QwtSlider" name="pwmBar05">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>200</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="mass">
+        <double>0.000000000000000</double>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="scalePosition">
+        <enum>QwtSlider::BottomScale</enum>
+       </property>
+       <property name="bgStyle">
+        <enum>QwtSlider::BgTrough</enum>
+       </property>
+       <property name="thumbLength">
+        <number>20</number>
+       </property>
+       <property name="thumbWidth">
+        <number>15</number>
+       </property>
+       <property name="borderWidth">
+        <number>2</number>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="gbPwm06">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>180</y>
+        <width>260</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>PWM 6</string>
+      </property>
+      <widget class="QLabel" name="lbPwm6">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>20</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QwtSlider" name="pwmBar06">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>200</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="mass">
+        <double>0.000000000000000</double>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="scalePosition">
+        <enum>QwtSlider::BottomScale</enum>
+       </property>
+       <property name="bgStyle">
+        <enum>QwtSlider::BgTrough</enum>
+       </property>
+       <property name="thumbLength">
+        <number>20</number>
+       </property>
+       <property name="thumbWidth">
+        <number>15</number>
+       </property>
+       <property name="borderWidth">
+        <number>2</number>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="gbPwm11">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>420</y>
+        <width>260</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>PWM 11</string>
+      </property>
+      <widget class="QLabel" name="lbPwm11">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>20</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QwtSlider" name="pwmBar11">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>200</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="mass">
+        <double>0.000000000000000</double>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="scalePosition">
+        <enum>QwtSlider::BottomScale</enum>
+       </property>
+       <property name="bgStyle">
+        <enum>QwtSlider::BgTrough</enum>
+       </property>
+       <property name="thumbLength">
+        <number>20</number>
+       </property>
+       <property name="thumbWidth">
+        <number>15</number>
+       </property>
+       <property name="borderWidth">
+        <number>2</number>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="gbPwm10">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>340</y>
+        <width>260</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>PWM 10</string>
+      </property>
+      <widget class="QLabel" name="lbPwm10">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>20</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QwtSlider" name="pwmBar10">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>200</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="mass">
+        <double>0.000000000000000</double>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="scalePosition">
+        <enum>QwtSlider::BottomScale</enum>
+       </property>
+       <property name="bgStyle">
+        <enum>QwtSlider::BgTrough</enum>
+       </property>
+       <property name="thumbLength">
+        <number>20</number>
+       </property>
+       <property name="thumbWidth">
+        <number>15</number>
+       </property>
+       <property name="borderWidth">
+        <number>2</number>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="gbPwm09">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>260</y>
+        <width>260</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>PWM 9</string>
+      </property>
+      <widget class="QLabel" name="lbPwm9">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>20</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QwtSlider" name="pwmBar09">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>200</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="mass">
+        <double>0.000000000000000</double>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="scalePosition">
+        <enum>QwtSlider::BottomScale</enum>
+       </property>
+       <property name="bgStyle">
+        <enum>QwtSlider::BgTrough</enum>
+       </property>
+       <property name="thumbLength">
+        <number>20</number>
+       </property>
+       <property name="thumbWidth">
+        <number>15</number>
+       </property>
+       <property name="borderWidth">
+        <number>2</number>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>90</x>
+        <y>520</y>
+        <width>44</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Unidades</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="cbUnit_2">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>523</y>
+        <width>69</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
  </widget>
@@ -1510,6 +1880,11 @@ QPushButton[digital=&quot;true&quot;]:pressed{
    <header>qwt_plot.h</header>
   </customwidget>
   <customwidget>
+   <class>QwtSlider</class>
+   <extends>QWidget</extends>
+   <header>qwt_slider.h</header>
+  </customwidget>
+  <customwidget>
    <class>QwtThermo</class>
    <extends>QWidget</extends>
    <header>qwt_thermo.h</header>
@@ -1518,6 +1893,105 @@ QPushButton[digital=&quot;true&quot;]:pressed{
  <resources>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
+  <include location="../resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pwmBar03</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>lbPwm3</receiver>
+   <slot>setNum(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>141</x>
+     <y>87</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>267</x>
+     <y>69</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmBar05</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>lbPwm5</receiver>
+   <slot>setNum(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>141</x>
+     <y>167</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>267</x>
+     <y>149</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmBar06</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>lbPwm6</receiver>
+   <slot>setNum(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>141</x>
+     <y>247</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>267</x>
+     <y>229</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmBar09</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>lbPwm9</receiver>
+   <slot>setNum(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>141</x>
+     <y>327</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>267</x>
+     <y>309</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmBar10</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>lbPwm10</receiver>
+   <slot>setNum(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>141</x>
+     <y>407</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>267</x>
+     <y>389</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmBar11</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>pwmBar11</receiver>
+   <slot>setValue(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>141</x>
+     <y>487</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>141</x>
+     <y>487</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
