--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -1556,9 +1556,6 @@ QPushButton[digital=&quot;true&quot;]:pressed{
        <property name="thumbWidth">
         <number>15</number>
        </property>
-       <property name="borderWidth">
-        <number>2</number>
-       </property>
       </widget>
      </widget>
      <widget class="QGroupBox" name="gbPwm05">
@@ -1612,9 +1609,6 @@ QPushButton[digital=&quot;true&quot;]:pressed{
        </property>
        <property name="thumbWidth">
         <number>15</number>
-       </property>
-       <property name="borderWidth">
-        <number>2</number>
        </property>
       </widget>
      </widget>
@@ -1670,9 +1664,6 @@ QPushButton[digital=&quot;true&quot;]:pressed{
        <property name="thumbWidth">
         <number>15</number>
        </property>
-       <property name="borderWidth">
-        <number>2</number>
-       </property>
       </widget>
      </widget>
      <widget class="QGroupBox" name="gbPwm11">
@@ -1726,9 +1717,6 @@ QPushButton[digital=&quot;true&quot;]:pressed{
        </property>
        <property name="thumbWidth">
         <number>15</number>
-       </property>
-       <property name="borderWidth">
-        <number>2</number>
        </property>
       </widget>
      </widget>
@@ -1784,9 +1772,6 @@ QPushButton[digital=&quot;true&quot;]:pressed{
        <property name="thumbWidth">
         <number>15</number>
        </property>
-       <property name="borderWidth">
-        <number>2</number>
-       </property>
       </widget>
      </widget>
      <widget class="QGroupBox" name="gbPwm09">
@@ -1841,9 +1826,6 @@ QPushButton[digital=&quot;true&quot;]:pressed{
        <property name="thumbWidth">
         <number>15</number>
        </property>
-       <property name="borderWidth">
-        <number>2</number>
-       </property>
       </widget>
      </widget>
      <widget class="QLabel" name="label_4">
@@ -1868,6 +1850,507 @@ QPushButton[digital=&quot;true&quot;]:pressed{
         <height>20</height>
        </rect>
       </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_5">
+     <attribute name="title">
+      <string>Servo</string>
+     </attribute>
+     <widget class="QWidget" name="layoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>751</width>
+        <height>544</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_39">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QGroupBox" name="servoGb1">
+           <property name="minimumSize">
+            <size>
+             <width>81</width>
+             <height>511</height>
+            </size>
+           </property>
+           <property name="title">
+            <string>Servo 1</string>
+           </property>
+           <widget class="QWidget" name="layoutWidget">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>20</y>
+              <width>61</width>
+              <height>481</height>
+             </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout">
+             <item>
+              <widget class="QComboBox" name="servoCmb1"/>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="servoCb1">
+               <property name="text">
+                <string>Activar</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QwtSlider" name="servoBar1">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="scalePosition">
+                <enum>QwtSlider::RightScale</enum>
+               </property>
+               <property name="thumbLength">
+                <number>20</number>
+               </property>
+               <property name="thumbWidth">
+                <number>15</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="servoBox1">
+               <property name="suffix">
+                <string>º</string>
+               </property>
+               <property name="maximum">
+                <number>180</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="servoBut1">
+               <property name="text">
+                <string>Cero</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="servoGb2">
+           <property name="minimumSize">
+            <size>
+             <width>81</width>
+             <height>511</height>
+            </size>
+           </property>
+           <property name="title">
+            <string>Servo 2</string>
+           </property>
+           <widget class="QWidget" name="layoutWidget_26">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>20</y>
+              <width>61</width>
+              <height>481</height>
+             </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_33">
+             <item>
+              <widget class="QComboBox" name="servoCmb2"/>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="servoCb2">
+               <property name="text">
+                <string>Activar</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QwtSlider" name="servoBar2">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="scalePosition">
+                <enum>QwtSlider::RightScale</enum>
+               </property>
+               <property name="thumbLength">
+                <number>20</number>
+               </property>
+               <property name="thumbWidth">
+                <number>15</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="servoBox2">
+               <property name="suffix">
+                <string>º</string>
+               </property>
+               <property name="maximum">
+                <number>180</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="servoBut2">
+               <property name="text">
+                <string>Cero</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_4">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="servoGb3">
+           <property name="minimumSize">
+            <size>
+             <width>81</width>
+             <height>511</height>
+            </size>
+           </property>
+           <property name="title">
+            <string>Servo 3</string>
+           </property>
+           <widget class="QWidget" name="layoutWidget_27">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>20</y>
+              <width>61</width>
+              <height>481</height>
+             </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_34">
+             <item>
+              <widget class="QComboBox" name="servoCmb3"/>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="servoCb3">
+               <property name="text">
+                <string>Activar</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QwtSlider" name="servoBar3">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="scalePosition">
+                <enum>QwtSlider::RightScale</enum>
+               </property>
+               <property name="thumbLength">
+                <number>20</number>
+               </property>
+               <property name="thumbWidth">
+                <number>15</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="servoBox3">
+               <property name="suffix">
+                <string>º</string>
+               </property>
+               <property name="maximum">
+                <number>180</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="servoBut3">
+               <property name="text">
+                <string>Cero</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_7">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="servoGb4">
+           <property name="minimumSize">
+            <size>
+             <width>81</width>
+             <height>511</height>
+            </size>
+           </property>
+           <property name="title">
+            <string>Servo 4</string>
+           </property>
+           <widget class="QWidget" name="layoutWidget_28">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>20</y>
+              <width>61</width>
+              <height>481</height>
+             </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_36">
+             <item>
+              <widget class="QComboBox" name="servoCmb4"/>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="servoCb4">
+               <property name="text">
+                <string>Activar</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QwtSlider" name="servoBar4">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="scalePosition">
+                <enum>QwtSlider::RightScale</enum>
+               </property>
+               <property name="thumbLength">
+                <number>20</number>
+               </property>
+               <property name="thumbWidth">
+                <number>15</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="servoBox4">
+               <property name="suffix">
+                <string>º</string>
+               </property>
+               <property name="maximum">
+                <number>180</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="servoBut4">
+               <property name="text">
+                <string>Cero</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_8">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="servoGb5">
+           <property name="minimumSize">
+            <size>
+             <width>81</width>
+             <height>511</height>
+            </size>
+           </property>
+           <property name="title">
+            <string>Servo 5</string>
+           </property>
+           <widget class="QWidget" name="layoutWidget_29">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>20</y>
+              <width>61</width>
+              <height>481</height>
+             </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_37">
+             <item>
+              <widget class="QComboBox" name="servoCmb5"/>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="servoCb5">
+               <property name="text">
+                <string>Activar</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QwtSlider" name="servoBar5">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="scalePosition">
+                <enum>QwtSlider::RightScale</enum>
+               </property>
+               <property name="thumbLength">
+                <number>20</number>
+               </property>
+               <property name="thumbWidth">
+                <number>15</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="servoBox5">
+               <property name="suffix">
+                <string>º</string>
+               </property>
+               <property name="maximum">
+                <number>180</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="servoBut5">
+               <property name="text">
+                <string>Cero</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_117">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="servoGb6">
+           <property name="minimumSize">
+            <size>
+             <width>81</width>
+             <height>511</height>
+            </size>
+           </property>
+           <property name="title">
+            <string>Servo 6</string>
+           </property>
+           <widget class="QWidget" name="layoutWidget_30">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>20</y>
+              <width>61</width>
+              <height>481</height>
+             </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_38">
+             <item>
+              <widget class="QComboBox" name="servoCmb6"/>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="servoCb6">
+               <property name="text">
+                <string>Activar</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QwtSlider" name="servoBar6">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="scalePosition">
+                <enum>QwtSlider::RightScale</enum>
+               </property>
+               <property name="thumbLength">
+                <number>20</number>
+               </property>
+               <property name="thumbWidth">
+                <number>15</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="servoBox6">
+               <property name="suffix">
+                <string>º</string>
+               </property>
+               <property name="maximum">
+                <number>180</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="servoBut6">
+               <property name="text">
+                <string>Cero</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QPushButton" name="servoBut0">
+         <property name="text">
+          <string>Todos cero</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
    </widget>
