--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -1251,6 +1251,22 @@ QPushButton[digital=&quot;true&quot;]:pressed{
            <string>0</string>
           </property>
          </widget>
+         <widget class="QCheckBox" name="analogShow0">
+          <property name="geometry">
+           <rect>
+            <x>230</x>
+            <y>40</y>
+            <width>16</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
         </widget>
        </item>
        <item row="0" column="1" rowspan="7">
@@ -1297,6 +1313,22 @@ QPushButton[digital=&quot;true&quot;]:pressed{
            <string>0</string>
           </property>
          </widget>
+         <widget class="QCheckBox" name="analogShow1">
+          <property name="geometry">
+           <rect>
+            <x>230</x>
+            <y>40</y>
+            <width>16</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
         </widget>
        </item>
        <item row="2" column="0">
@@ -1334,6 +1366,22 @@ QPushButton[digital=&quot;true&quot;]:pressed{
           </property>
           <property name="text">
            <string>0</string>
+          </property>
+         </widget>
+         <widget class="QCheckBox" name="analogShow2">
+          <property name="geometry">
+           <rect>
+            <x>230</x>
+            <y>40</y>
+            <width>16</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </widget>
@@ -1375,6 +1423,22 @@ QPushButton[digital=&quot;true&quot;]:pressed{
            <string>0</string>
           </property>
          </widget>
+         <widget class="QCheckBox" name="analogShow3">
+          <property name="geometry">
+           <rect>
+            <x>230</x>
+            <y>40</y>
+            <width>16</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
         </widget>
        </item>
        <item row="4" column="0">
@@ -1412,6 +1476,22 @@ QPushButton[digital=&quot;true&quot;]:pressed{
           </property>
           <property name="text">
            <string>0</string>
+          </property>
+         </widget>
+         <widget class="QCheckBox" name="analogShow4">
+          <property name="geometry">
+           <rect>
+            <x>230</x>
+            <y>40</y>
+            <width>16</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </widget>
@@ -1453,8 +1533,22 @@ QPushButton[digital=&quot;true&quot;]:pressed{
            <string>0</string>
           </property>
          </widget>
-         <zorder>lbAnalog5</zorder>
-         <zorder>analogBar5</zorder>
+         <widget class="QCheckBox" name="analogShow5">
+          <property name="geometry">
+           <rect>
+            <x>230</x>
+            <y>40</y>
+            <width>16</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
         </widget>
        </item>
        <item row="6" column="0">
